<resources>
    <string name="app_name">4Lyfe</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="weather">Weather</string>

    <string name="hello_main_fragment">Hello main fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="last_name">Last Name:</string>
    <string name="first_name">First Name:</string>
    <string name="finish_intake_button">Finish</string>
    <string name="last_name_hint">Last Name</string>
    <string name="first_name_hint">First Name</string>
    <string name="birthday_header">Birthday:</string>
    <string name="name_header">Name:</string>
    <string name="sex_header">Sex:</string>
    <string name="sign_up">Sign up</string>
    <string name="profile_picture">Profile Picture:</string>
    <string name="choose_image_button">Choose Image</string>
    <string name="replace_image_button">Replace Image</string>
    <string name="user_info_label">\tDate of Birth: \n\n\tSex: \n\n\tHeight: \n\n\tWeight: \n\n\tWeight Goal: \n\n\tLifestyle: \n\n</string>
    <string name="height_header">Height:</string>
    <string name="inches_header">Inches</string>
    <string name="feet_header">Feet</string>
    <string name="weight_header">Weight:</string>
    <string name="weight_goal_header">How many pounds (lbs) a week would you like to gain/lose?</string>
    <string name="lifestyle_header">What\'s your lifestyle?</string>
    <string name="location_permission_button">Select your location</string>
    <string name="circular_image">Circular cutout of the image the user picked</string>
    <string name="sex_picker_description">Popup picker for one\'s sex</string>
    <string name="loading_text">Loading…</string>
    <string name="updated_time_header">Updated At: </string>
    <string name="test_text">test</string>
    <string name="users_profile_picture">User\'s profile picture</string>
</resources>