<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_name_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Intake.UserCreationCards.NameCardFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/name_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:elevation="8dp"
        android:outlineAmbientShadowColor="@color/purple_200">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/first_name_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:text="@string/name_header"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/first_name_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_name_title"
                android:layout_margin="4dp"
                android:autofillHints="AUTOFILL_HINT_PERSON_NAME_GIVEN"
                android:hint="@string/first_name_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/last_name_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_name_ET"
                android:layout_margin="4dp"
                android:autofillHints="AUTOFILL_HINT_PERSON_NAME_FAMILY"

                android:hint="@string/last_name_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</FrameLayout>