<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_photo_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Intake.UserCreationCards.PhotoCardFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:elevation="8dp"
        android:outlineAmbientShadowColor="@color/purple_200">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/profile_picture_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:text="@string/profile_picture"
                tools:ignore="RtlSymmetry" />

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_picture_title"
                android:layout_centerHorizontal="true"
                card_view:cardCornerRadius="250dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    card_view:cardCornerRadius="250dp">

                    <ImageView
                        android:id="@+id/profile_image"
                        android:layout_width="145dp"
                        android:layout_height="145dp"
                        android:background="@color/grey"
                        android:contentDescription="@string/circular_image"
                        android:scaleType="centerCrop" />
                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/choose_image_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_circle"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:text="@string/choose_image_button" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</FrameLayout>