<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:translationY="10dp"
        tools:context=".pages.SettingsFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/settings_profile_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            card_view:cardCornerRadius="250dp">


            <ImageView
                android:id="@+id/settings_profile_image"
                android:layout_width="145dp"
                android:layout_height="145dp"
                android:background="@color/grey"
                android:contentDescription="@string/circular_image"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/settings_user_name_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/settings_profile_circle"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:padding="10dp"
            android:textFontWeight="800"
            android:textSize="30sp" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_user_name_text"
            android:layout_margin="10dp">

            <RelativeLayout
                android:id="@+id/settings_name_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:paddingBottom="20dp"
                card_view:cardElevation="10dp">

                <ImageButton
                    android:id="@+id/edit_settings_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/users_profile_picture"
                    android:src="@drawable/ic_baseline_edit_24" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/edit_settings_button"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/user_info_labels"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/user_info_label" />

                    <TextView
                        android:id="@+id/user_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="" />
                </RelativeLayout>


            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </RelativeLayout>
</ScrollView>
